# Cutdown

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.cursor/skills/issue-implement/: SKILL.md  cutdown.md
.cursor/skills/issue-review/: SKILL.md  checklist.md
.github/ISSUE_TEMPLATE/: agent_task.yml
.github/workflows/: ci.yml
docs/: AGENT-WORKFLOW.md  RELEASE.md  TESTING.md
release/: Cutdown_0.3.1_x64-setup.exe.sig  README.md  latest.json
scripts/: generate-latest-json.ps1  prepare-ffmpeg.ps1  validate-release.ps1
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clip_history.rs  command_util.rs  encoder_detect.rs  ffmpeg.rs  ffmpeg_install.rs  launch.rs  main.rs  obs.rs  presets.rs  project.rs  secret_store.rs  settings.rs  source_session.rs  upload.rs  upload_providers.rs  watch_folder.rs  windows_integration.rs
src-tauri/src/upload/: client.rs  mod.rs  response.rs
src-tauri/src/upload/providers/: catbox.rs  filegarden.rs  http_multipart.rs  mod.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: ClipHistoryDrawer.svelte  ConfirmModal.svelte  DraggablePanel.svelte  ExportActivity.svelte  ExportModal.svelte  IconButton.svelte  MarkerLabelModal.svelte  ProgressBar.svelte  RelinkSourceModal.svelte  SettingsModal.svelte  ShortcutsModal.svelte  SvgIcon.svelte  Timeline.svelte  TimelineWaveform.svelte  ToastHost.svelte  UpdateModal.svelte  UploadTargetModal.svelte  VideoPreview.svelte
src/lib/: appIcons.ts  appUpdate.ts  audioPresets.test.ts  audioPresets.ts  exportFormats.test.ts  exportFormats.ts  exportPresets.ts  exportQueue.test.ts  exportQueue.ts  format.ts  placeMenu.ts  projectFile.test.ts  projectFile.ts  registerIcons.ts  segmentBounds.test.ts  segmentBounds.ts  sequencePlayback.test.ts  sequencePlayback.ts  svgIcon.ts  timelineEditing.test.ts  timelineEditing.ts  timelineMapping.test.ts  timelineMapping.ts  timelineTrackSizing.test.ts  timelineTrackSizing.ts  types.ts  uploadProviders.test.ts  uploadProviders.ts
src/stores/: editor.ts  toasts.ts
