[package]
name = "cutdown"
version = "0.2.0"
description = "Fast desktop video clipping and compression tool."
authors = ["Cutdown"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Quvvy/Cutdown"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
notify = "7"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
zip = "2.2"

